--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 50%;
 }
 
 * {
@@ -26,15 +26,18 @@ html {
 }
 
 body {
-    font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
-    min-height: 100dvh;
-    font-size: 1.6rem;
-    background-color: var(--bg-main);
-    color: var(--text-primary);
-    padding: 5rem 0;
     align-items: flex-start;
+
+    min-height: 100dvh;
+    padding: 5rem 0;
+
+    background-color: var(--bg-main);
+
+    font-family: 'Inter', sans-serif;
+    font-size: 1.6rem;
+    color: var(--text-primary);
 }
 
 .container-main,
@@ -46,249 +49,409 @@ header,
     flex-direction: column;
 }
 
+.todo-ul li,
+.container-input-button {
+    display: flex;
+}
+
 .container-main {
+    align-items: center;
+    gap: 2rem;
+
     width: 80vw;
     max-width: 80rem;
     margin: 0 5rem;
-    gap: 2rem;
-    align-items: center;
+    padding: 3rem;
+
     background-color: var(--surface-1);
-    padding: 4rem 6rem;
-    border-radius: 3rem;
     border: 1px solid var(--surface-2);
+    border-radius: 3rem;
     box-shadow: var(--shadow-m);
+}
 
-    & header {
-        align-items: center;
-        gap: 1rem;
-        margin-bottom: 1rem;
-        height: fit-content;
-        flex-shrink: 0;
+header {
+    flex-shrink: 0;
+    align-items: center;
+    gap: 1rem;
+    position: relative;
+    padding-bottom: 1rem;
+    width: 70%;
 
-        & h1 {
-            font-size: 2.8rem;
-            font-weight: bold;
-        }
+    height: fit-content;
+    margin-bottom: 1rem;
 
-        & p {
-            color: var(--text-secondary);
-            font-size: 1.2rem;
-        }
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+
+        height: 0.1rem;
+        width: 100%;
+        background-color: var(--color-primary);
     }
 
-    & .container-ul {
-        gap: 1rem;
+    &::after {
+        content: '';
+        z-index: 5;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+
+        height: 0.1rem;
+        width: 20%;
+
+        background-image: linear-gradient(
+            to right,
+            transparent 0%,
+            transparent 10%,
+            var(--accent-cyan) 50%,
+            var(--accent-cyan) 40%,
+            transparent 90%,
+            transparent 100%
+        );
+
+        animation: slideBar 5s linear infinite alternate;
+    }
+
+    & p {
+        color: var(--text-secondary);
+        font-size: 1.5rem;
+        text-align: center;
+    }
+}
+
+h1 {
+    font-size: 2.8rem;
+    font-weight: bold;
+}
+
+.container-ul {
+    flex: 1 1 auto;
+    position: relative;
+    gap: 1rem;
+    width: 100%;
+}
+
+.container-input {
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.container-input-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    gap: 1rem;
+}
+
+.todo-ul {
+    gap: 1rem;
+    width: 100%;
+    overflow-wrap: anywhere;
+}
+
+.todo-ul li {
+    justify-content: space-between;
+    position: relative;
+    padding: 1rem;
+    border-radius: 1rem;
+
+    &:has(input[type='checkbox']:checked) {
+        background-image: linear-gradient(
+            to right,
+            transparent 10%,
+            var(--accent-cyan) 150%
+        );
+
+        & p {
+            text-decoration: line-through;
+            color: var(--text-secondary);
+        }
+    }
+}
+
+.main-input {
+    padding: 0.6rem 1rem;
+
+    background-color: rgba(217, 243, 255, 0.13);
+    border: 1px solid var(--color-primary);
+    border-radius: 2rem;
+
+    font-size: 1.6rem;
+    color: var(--text-primary);
+
+    transition: box-shadow 0.8s;
+
+    &::placeholder {
+        color: rgba(255, 255, 255, 0.527);
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 8px var(--accent-cyan);
+        transition: box-shadow 0.2s;
+    }
+}
+
+.add-button {
+    align-self: center;
+    padding: 0.5rem 1rem;
+
+    background-color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+    border-radius: 2rem;
+
+    font-family: inherit;
+    font-weight: 600;
+    color: var(--text-primary);
+
+    cursor: pointer;
+
+    &:focus {
+        outline: none;
+    }
+
+    &:active {
+        background-color: var(--accent-cyan);
+        box-shadow: 0 0 8px var(--accent-cyan);
+        transition: box-shadow 0.2s;
+    }
+}
+
+.task-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    & input[type='checkbox'] {
+        display: inline-block;
+        position: relative;
+        flex-shrink: 0;
+
+        width: 18px;
+        height: 18px;
+
+        appearance: none;
+        border: 2px solid var(--color-primary);
+        border-radius: 4px;
+
+        font-family: inherit;
+
+        cursor: pointer;
+
+        &:hover {
+            border: 2px solid var(--accent-cyan);
+            box-shadow: 0 0 10px var(--accent-cyan);
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            background-color: var(--accent-cyan);
+        }
+
+        &:checked::before {
+            top: 2px;
+            left: 2px;
+            bottom: 2px;
+            right: 2px;
+        }
+    }
+}
+
+.message-ul {
+    display: flex;
+    justify-content: center;
+    color: var(--text-secondary);
+}
+
+.buttons-li-container {
+    display: flex;
+    margin-right: 0.6rem;
+}
+
+.button-li {
+    display: none;
+}
+
+.menu-mobile-button {
+    width: 2.5rem;
+    height: 3rem;
+
+    background-color: transparent;
+    color: var(--text-secondary);
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 2.5rem;
+
+    &.open {
+        z-index: 10;
+    }
+}
+
+.menu-mobile-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    position: absolute;
+    z-index: 9;
+
+    right: 0;
+    top: 0;
+
+    background-color: rgba(0, 0, 0, 0.39);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--accent-cyan);
+    border-radius: 1rem;
+
+    &.open {
+        opacity: 1;
+        animation: openMenuMobile 0.8s forwards;
+    }
+
+    &.closed {
+        animation: closeMenuMobile 0.5s forwards;
+    }
+}
+
+.button-mobile {
+    height: fit-content;
+    width: 70%;
+    padding: 0.5rem 0.6rem;
+
+    border: 1px solid var(--danger);
+    border-radius: 1rem;
+    background-color: transparent;
+    color: inherit;
+    font-family: inherit;
+
+    visibility: hidden;
+    opacity: 0;
+
+    &.open {
+        animation: showMobileButton 1s forwards;
+    }
+
+    &:active {
+        background-color: var(--danger);
+        box-shadow: 0 0 10px var(--danger);
+    }
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-filters {
+    color: var(--text-secondary);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    border: 2px solid var(--surface-3);
+    overflow: hidden;
+    border-radius: 1rem;
+}
+
+.filter-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 3rem;
+
+    cursor: pointer;
+
+    &:has(input[type='radio']:checked) {
+        background-color: rgba(186, 222, 255, 0.164);
+    }
+
+    & input[type='radio'] {
+        appearance: none;
+    }
+
+    & label {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem;
+
         width: 100%;
-        flex: 1 1 auto;
+        height: 100%;
 
-        & .todo-ul li,
-        .container-input-button {
-            display: flex;
-        }
+        cursor: pointer;
+    }
+}
 
-        & .container-input {
-            gap: 1rem;
-            align-items: center;
-            margin-bottom: 2rem;
+.counter {
+    display: flex;
+    align-self: center;
+    margin-top: 1rem;
+    color: var(--text-secondary);
+}
 
-            & .container-input-button {
-                display: flex;
-                gap: 1rem;
-            }
+@keyframes slideBar {
+    from {
+        left: 0;
+    }
+    to {
+        left: 80%;
+    }
+}
 
-            & .main-input {
-                padding: 0.6rem 1rem;
-                border: 1px solid var(--color-primary);
-                border-radius: 2rem;
-                font-size: 1.6rem;
-                background-color: rgba(217, 243, 255, 0.13);
-                color: var(--text-primary);
-                transition: box-shadow 0.8s;
+@keyframes openMenuMobile {
+    0% {
+        width: 0;
+        height: 3rem;
+        padding: 0;
+    }
+    50% {
+        width: 15rem;
+        height: 3rem;
+    }
+    100% {
+        width: 15rem;
+        height: fit-content;
+        padding: 1rem;
+    }
+}
 
-                &::placeholder {
-                    color: rgba(255, 255, 255, 0.527);
-                }
+@keyframes closeMenuMobile {
+    0% {
+        width: 15rem;
+        height: fit-content;
+        opacity: 1;
+    }
+    50% {
+        width: 15rem;
+        height: 3rem;
+        opacity: 1;
+    }
+    90% {
+        width: 0;
+        height: 3rem;
+        opacity: 1;
+    }
+    100% {
+        width: 0;
+        height: 3rem;
+        opacity: 0;
+    }
+}
 
-                &:focus {
-                    outline: none;
-                    box-shadow: 0 0 8px var(--accent-cyan);
-                    transition: box-shadow 0.2s;
-                }
-            }
-
-            & .add-button {
-                background-color: var(--color-primary);
-                border: none;
-                cursor: pointer;
-                color: var(--text-primary);
-                font-weight: 600;
-                padding: 0.5rem 1rem;
-                font-family: inherit;
-                border-radius: 2rem;
-
-                &:focus {
-                    outline: none;
-                }
-
-                &:hover {
-                    background-color: var(--accent-cyan);
-                    box-shadow: 0 0 8px var(--accent-cyan);
-                    transition: box-shadow 0.2s;
-                }
-            }
-        }
-
-        & .todo-ul {
-            gap: 1rem;
-            overflow-wrap: anywhere;
-
-            & li {
-                justify-content: space-between;
-                align-items: center;
-                gap: 1rem;
-                padding: 0.6rem 0.8rem;
-                border-radius: 1rem;
-
-                &:has(input[type='checkbox']:checked) {
-                    background-image: linear-gradient(
-                        to left,
-                        var(--color-primary) -30%,
-                        transparent
-                    );
-                }
-
-                &:hover {
-                    background-color: var(--surface-3);
-
-                    & .buttons-li-container {
-                        transition: opacity 0.3s;
-                        opacity: 1;
-                    }
-                }
-
-                & .task-container {
-                    align-items: center;
-                    display: flex;
-                    gap: 0.5rem;
-
-                    & input[type='checkbox'] {
-                        appearance: none;
-                        width: 18px;
-                        height: 18px;
-                        border: 2px solid var(--color-primary);
-                        border-radius: 4px;
-                        position: relative;
-                        display: inline-block;
-                        cursor: pointer;
-                        font-family: inherit;
-                        flex-shrink: 0;
-
-                        &:hover {
-                            box-shadow: 0 0 10px var(--accent-cyan);
-                            border: 2px solid var(--accent-cyan);
-                        }
-
-                        &::before {
-                            content: '';
-                            position: absolute;
-                            background-color: var(--accent-cyan);
-                        }
-
-                        &:checked::before {
-                            top: 2px;
-                            left: 2px;
-                            bottom: 2px;
-                            right: 2px;
-                        }
-                    }
-                }
-
-                & .buttons-li-container {
-                    display: flex;
-                    opacity: 0;
-                    margin-right: 0.6rem;
-
-                    & .menu-mobile-button,
-                    .menu-mobile-container {
-                        display: none;
-                    }
-
-                    & .button-li {
-                        background-color: transparent;
-                        padding: 1rem 0.8rem 0.6rem 0.8rem;
-                        cursor: pointer;
-                        color: var(--text-primary);
-                        font-weight: 600;
-                        border-radius: 2rem;
-                        background-color: var(--surface-1);
-                        font-size: 1.8rem;
-                        align-self: center;
-
-                        &.li-delete {
-                            border: 2px solid var(--danger);
-                            &:hover {
-                                background-color: var(--danger);
-                                box-shadow: 0 0 10px var(--danger);
-                            }
-                        }
-                    }
-                }
-            }
-
-            & .message-ul {
-                display: flex;
-                justify-content: center;
-                color: var(--text-secondary);
-            }
-        }
-
-        & footer {
-            display: flex;
-            flex-direction: column;
-            gap: 0.8rem;
-            height: fit-content;
-            flex-shrink: 0;
-
-            & .container-filters {
-                color: var(--text-secondary);
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                border: 2px solid var(--surface-3);
-                overflow: hidden;
-                border-radius: 1rem;
-
-                & .filter-item {
-                    cursor: pointer;
-                    height: 3rem;
-
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    &:has(input[type='radio']:checked) {
-                        background-color: rgba(186, 222, 255, 0.164);
-                    }
-
-                    & input[type='radio'] {
-                        appearance: none;
-                    }
-
-                    & label {
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        cursor: pointer;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                }
-            }
-
-            & .counter {
-                color: var(--text-secondary);
-                display: flex;
-                align-self: center;
-            }
-        }
+@keyframes showMobileButton {
+    0% {
+        opacity: 0;
+        visibility: hidden;
+    }
+    80% {
+        opacity: 0;
+        visibility: visible;
+    }
+    100% {
+        opacity: 1;
+        visibility: visible;
     }
 }
