--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,7 @@ h1 {
         background-image: linear-gradient(
             to right,
             transparent 10%,
-            var(--accent-cyan) 150%
+            var(--text-secondary) 150%
         );
 
         & p {
@@ -337,6 +337,94 @@ h1 {
     &:active {
         background-color: var(--danger);
         box-shadow: 0 0 10px var(--danger);
+    }
+}
+
+.editTodo-container,
+.blur-bg {
+    visibility: hidden;
+}
+
+.editTodo-container.open-edit,
+.blur-bg.open-edit {
+    visibility: visible;
+}
+
+.blur-bg {
+    background-color: rgba(0, 0, 0, 0.418);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 15;
+    backdrop-filter: blur(30px);
+}
+
+.editTodo-container {
+    display: grid;
+    position: absolute;
+    grid-template-columns: repeat(2, 1fr);
+    visibility: hidden;
+    z-index: 20;
+
+    gap: 1rem;
+    width: 60%;
+
+    padding: 2rem 4rem;
+
+    background-color: var(--surface-2);
+    border: 1px solid var(--text-secondary);
+    border-radius: 1rem;
+
+    & .edit-input {
+        grid-column: span 2;
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid var(--color-primary);
+        color: var(--text-secondary);
+        font-family: inherit;
+        font-size: 1.6rem;
+        padding: 0.2rem 0.5rem;
+        max-width: 100%;
+    }
+
+    & .button-edit {
+        border: 2px solid;
+        border-radius: 1rem;
+        padding: 0.5rem 0.6rem;
+        background-color: var(--surface-1);
+        font-family: inherit;
+        cursor: pointer;
+    }
+}
+
+.edit-confirm {
+    color: var(--success);
+    border-color: #22c55e;
+
+    &:hover,
+    &:active {
+        background-color: var(--success);
+        color: var(--text-primary);
+        border-color: var(--success);
+        box-shadow: 0 0 20px var(--success);
+    }
+}
+
+.edit-cancel {
+    color: var(--danger);
+    border-color: var(--danger);
+
+    &:hover,
+    &:active {
+        background-color: var(--danger);
+        color: var(--text-primary);
+        border-color: var(--danger);
+        box-shadow: 0 0 20px var(--danger);
     }
 }
 
