--- a/src/media-1024.css
+++ b/src/media-1024.css
@@ -34,6 +34,7 @@
     .buttons-li-container {
         display: flex;
         margin-right: 0.6rem;
+        gap: 1rem;
 
         height: 4rem;
         width: fit-content;
@@ -61,6 +62,14 @@
             &:hover {
                 background-color: var(--danger);
                 box-shadow: 0 0 10px var(--danger);
+            }
+        }
+
+        &.li-edit {
+            border: 2px solid var(--color-primary);
+            &:hover {
+                background-color: var(--color-primary);
+                box-shadow: 0 0 10px var(--color-primary);
             }
         }
     }
