--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,9 @@ h1 {
     position: absolute;
     z-index: 9;
 
+    width: 0;
+    height: 3rem;
+    visibility: hidden;
     right: 0;
     top: 0;
 
@@ -307,12 +310,9 @@ h1 {
     border-radius: 1rem;
 
     &.open {
+        visibility: visible;
         opacity: 1;
         animation: openMenuMobile 0.8s forwards;
-    }
-
-    &.closed {
-        animation: closeMenuMobile 0.5s forwards;
     }
 }
 
@@ -503,29 +503,6 @@ footer {
         width: 15rem;
         height: fit-content;
         padding: 1rem;
-    }
-}
-
-@keyframes closeMenuMobile {
-    0% {
-        width: 15rem;
-        height: fit-content;
-        opacity: 1;
-    }
-    50% {
-        width: 15rem;
-        height: 3rem;
-        opacity: 1;
-    }
-    90% {
-        width: 0;
-        height: 3rem;
-        opacity: 1;
-    }
-    100% {
-        width: 0;
-        height: 3rem;
-        opacity: 0;
     }
 }
 
